--- a/src/Components/Login/DummyDashboard.scss
+++ b/src/Components/Login/DummyDashboard.scss
@@ -169,4 +169,28 @@
   .Dummy__contactSmall {
     font-size: 16px;
   }
+
+  // new css
+
+  .addmissionButton {
+    width: 20%;
+    height: 50px;
+    font-size: 20px;
+  }
+  .shareButton {
+    width: 15%;
+    height: 45px;
+    font-size: 18px;
+  }
+  .Dashboard_image {
+    width: 25%;
+  }
+  .shareImage {
+    width: 25%;
+  }
+  .colorForBack {
+    width: 15%;
+    height: 50px;
+    font-size: 18px;
+  }
 }
