--- a/src/Components/Courses/Courses.scss
+++ b/src/Components/Courses/Courses.scss
@@ -159,6 +159,9 @@
   &__slimButton {
     height: 20px;
     width: 74px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   &__container {
