--- a/src/Components/Login/Preloader/Preloader.scss
+++ b/src/Components/Login/Preloader/Preloader.scss
@@ -20,7 +20,9 @@
 
 .Preloader__brand {
   color: rgb(0, 158, 206);
-  font-size: 65px;
+  font-size: 35px;
+  letter-spacing: 0px;
+  font-family: 'Montserrat-Medium';
 }
 @media screen and (min-width: 800px) {
   .Login {
