--- a/src/Components/Login/SignIn/SignIn.scss
+++ b/src/Components/Login/SignIn/SignIn.scss
@@ -48,7 +48,7 @@
   }
 
   &__UserCard {
-    width: 30%;
+    width: 40%;
     @include media-breakpoint-down(xs) {
       width: 80%;
     }
@@ -63,8 +63,8 @@
   width: 38px;
 }
 .userName {
-  font-size: 10px;
-  font-family: 'Montserrat-medium';
+  font-size: 12px;
+  font-family: 'Montserrat-Medium';
 }
 
 .marginForSelectUserImgLogo {
@@ -88,13 +88,24 @@
     font-family: 'Montserrat-Medium' !important;
     letter-spacing: 1.26px !important;
   }
-  .image {
+  .Signin__userimage {
     height: 50px;
     width: 50px;
   }
   .userName {
     font-size: 18px;
-    font-family: 'Montserrat-medium' !important;
+    font-family: 'Montserrat-Medium' !important;
     height: 30px;
+  }
+}
+
+@media screen and (min-width: 1700px) {
+  .Signin__UserCard {
+    width: 40%;
+    height: 130px !important;
+  }
+  .Signin__userimage {
+    height: 70px !important;
+    width: 70px !important;
   }
 }
