--- a/src/Components/Login/Preloader/Preloader.scss
+++ b/src/Components/Login/Preloader/Preloader.scss
@@ -19,7 +19,7 @@
 }
 
 .Preloader__brand {
-  color: rgb(0, 158, 206);
+  color: var(--primary-blue);
   font-size: 35px;
   letter-spacing: 0px;
   font-family: 'Montserrat-Medium';
