new apis updated for addTest and analysis page after attempt of test

--- a/src/Components/Analysis/Analysis.scss
+++ b/src/Components/Analysis/Analysis.scss
@@ -178,11 +178,11 @@
   &__Marks {
     position: absolute;
     top: 15%;
-    right: 40%;
+    right: calc(50% - 37px);
 
-    @include media-breakpoint-up(sm) {
-      right: 45%;
-    }
+    // @include media-breakpoint-up(sm) {
+    //   right: 45%;
+    // }
     // @include media-breakpoint-up(xxl) {
     //   right: 48%;
     // }
