--- a/src/Components/Common/QuestionTaker/QuestionTaker.scss
+++ b/src/Components/Common/QuestionTaker/QuestionTaker.scss
@@ -43,6 +43,7 @@
     letter-spacing: 0.49px;
     line-height: $spacer * 1.75;
     color: $headingGrey;
+    white-space: pre-line;
   }
 
   &__questionOptions {
