--- a/src/Components/HomeWorkCreator/HomeWorkCreator.scss
+++ b/src/Components/HomeWorkCreator/HomeWorkCreator.scss
@@ -129,6 +129,7 @@
     font-family: $regular;
     color: $headingGrey;
     line-height: $spacer * 1.25;
+    white-space: pre-line;
   }
 
   &__options {
