--- a/src/Components/HomeWorkCreator/HomeWorkCreator.scss
+++ b/src/Components/HomeWorkCreator/HomeWorkCreator.scss
@@ -532,3 +532,9 @@
   font-family: 'Montserrat-Bold';
   // border: 1px solid rgba(169, 169, 169, 0.445);
 }
+
+.finalQuestionImageClass {
+  max-width: 80%;
+  max-height: 100px;
+  margin: 20px 0px;
+}
