--- a/src/scss/_floatingLabel.scss
+++ b/src/scss/_floatingLabel.scss
@@ -27,6 +27,8 @@
 .has-float-label > input[type='number']:focus + span,
 .has-float-label > input[type='date']:focus + span,
 .has-float-label > input[type='time']:focus + span,
+.has-float-label > input[type='textarea']:focus + span,
+.has-float-label > span > input[type='number']:focus + span,
 .has-float-label > textarea:focus + span {
   color: var(--primary-blue);
 }
@@ -130,7 +132,9 @@ input[readonly].form-control {
 .has-float-label > input[type='date']:focus,
 .has-float-label > input[type='password']:focus,
 .has-float-label > input[type='number']:focus,
+.has-float-label > span > input[type='number']:focus,
 .has-float-label > input[type='time']:focus,
+.has-float-label > input[type='textarea']:focus,
 .has-float-label > textarea:focus {
   border-color: var(--primary-blue);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(255, 255, 255, 0.6);
@@ -141,7 +145,9 @@ input[readonly].form-control {
 .has-float-label > input[type='password'],
 .has-float-label > input[type='date'],
 .has-float-label > input[type='number'],
+.has-float-label > span > input[type='number'],
 .has-float-label > input[type='text'],
+.has-float-label > input[type='textarea'],
 .has-float-label > input[type='time'] {
   border-color: rgba(0, 0, 0, 0.54);
   border-radius: 5px;
