--- a/src/Components/Analysis/Analysis.scss
+++ b/src/Components/Analysis/Analysis.scss
@@ -1,6 +1,6 @@
-* {
-  font-family: 'Montserrat-Regular';
-}
+// * {
+//   font-family: 'Montserrat-Regular';
+// }
 .Analysis {
   @import '../../scss/bootstrap';
 
