--- a/src/Components/Common/AddButton/AddButton.scss
+++ b/src/Components/Common/AddButton/AddButton.scss
@@ -23,7 +23,7 @@
   }
 
   &__innerDivLong {
-    background-color: #bce0fd;
+    background-color: #bce0fdaa;
     height: 17rem;
     width: 14rem;
   }
