--- a/src/Components/Dashboard/Dashboard.scss
+++ b/src/Components/Dashboard/Dashboard.scss
@@ -230,7 +230,7 @@
     font-family: 'Montserrat-Medium';
     font-size: $spacer * 0.75;
     color: $headingGrey;
-    line-height: 15px;
+    line-height: 22px;
     border-radius: 0 0 5px 5px;
     opacity: 0.75;
   }
@@ -580,6 +580,10 @@
   cursor: pointer;
 }
 
+.largeScreenPadding {
+  padding: 1px;
+}
+
 // =============== very large screen
 @media screen and (min-width: 1440px) {
   .Dashboard__headerCard {
@@ -687,6 +691,9 @@
   }
   .connectWithUsText {
     font-size: 22px !important;
+  }
+  .largeScreenPadding {
+    padding: 14px !important;
   }
 }
 
