--- a/src/Components/Login/Welcome/Welcome.scss
+++ b/src/Components/Login/Welcome/Welcome.scss
@@ -245,7 +245,7 @@
   .btn-JumboLogin {
     margin-top: 20px !important;
     margin-bottom: 40px !important;
-    font-size: 22px !important;
+    font-size: 22px;
     width: 360px;
     height: 70px;
   }
@@ -278,7 +278,7 @@
   .btn-JumboLogin {
     margin-top: 20px !important;
     margin-bottom: 40px !important;
-    font-size: 24px !important;
+    font-size: 24px;
     width: 460px;
     height: 100px;
   }
