--- a/src/Components/Tests/Tests.scss
+++ b/src/Components/Tests/Tests.scss
@@ -111,10 +111,10 @@
   margin: auto;
   text-align: center;
 }
-.tab {
+.tablc {
   overflow: auto;
 }
-.tab::-webkit-scrollbar {
+.tablc::-webkit-scrollbar {
   display: none;
 }
 
