--- a/src/Components/DisplayPage/DisplayPage.scss
+++ b/src/Components/DisplayPage/DisplayPage.scss
@@ -33,6 +33,13 @@
   height: auto !important;
 }
 
+.displayCardModal {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 @media screen and (max-width: 800px) {
   .testimonialVideoTag {
     width: 300px !important;
