--- a/src/Components/Login/Welcome/Welcome.scss
+++ b/src/Components/Login/Welcome/Welcome.scss
@@ -241,6 +241,12 @@
   }
 }
 
+@media screen and (min-width: 2500px) {
+  .Welcome__carouselSubHeading {
+    margin-top: 55px !important;
+  }
+}
+
 @media screen and (min-width: 1440px) {
   .btn-JumboLogin {
     margin-top: 20px !important;
@@ -250,7 +256,7 @@
     height: 70px;
   }
   .Welcome__carouselSubHeading {
-    margin-top: 120px !important;
+    margin-top: 55px !important;
     font-size: 35px;
     margin-bottom: 15px;
   }
@@ -307,11 +313,19 @@
   }
 }
 
+@media screen and (min-height: 2600px) {
+  .Welcome__carouselSubHeading {
+    margin-top: 7vh !important;
+  }
+}
+
 @media screen and (min-height: 1150px) {
   .Welcome__carouselSubHeading {
     margin-top: 12vh !important;
   }
 }
+
+
 
 @keyframes slidein {
   0% {
