--- a/src/scss/_buttonStyles.scss
+++ b/src/scss/_buttonStyles.scss
@@ -1,3 +1,7 @@
+button {
+  box-shadow: none !important;
+}
+
 .btn-customPrimary {
   background-color: var(--primary-blue, rgba(38, 153, 251, 1));
   color: #fff;
@@ -232,6 +236,12 @@
 .btn-boldText:hover {
   color: var(--primary-blue);
 }
+
+// .btn-boldText:focus {
+//   transition: none;
+//   box-shadow: none !important;
+
+// }
 
 .btn-boldTextSecondary {
   background-color: #fff;
